# whisper-pandas

./: LICENSE  README.md  setup.cfg  setup.py  test_whisper_pandas.py  whisper_pandas.ipynb  whisper_pandas.py
data/: README.md  example_truncated.wsp
