[metadata]
name = whisper-pandas
version = 0.1
author = Christoph Deil
author_email = deil.christoph@gmail.com
description = WhisperDB Python Pandas Reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heidelbergcement/whisper-pandas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules =
    whisper_pandas
python_requires = >=3.7

[options.entry_points]
console_scripts =
    whisper-pandas = whisper_pandas:main
