[metadata]
name = whisper-pandas
version = 0.1
author = Christoph Deil
author_email = deil.christoph@gmail.com
description = WhisperDB Python Pandas Reader
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
url = https://github.com/heidelbergcement/whisper-pandas

[options]
py_modules =
    whisper_pandas
python_requires = >=3.7
install_requires=
    pandas
    whisper

[options.entry_points]
console_scripts =
    whisper-pandas = whisper_pandas:main
